--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-architectures",
+  "name": "css-architectures-workshop-v1",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -36,5 +36,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
